添加golang ai；支持url设置其他AI

--- a/index.less
+++ b/index.less
@@ -155,19 +155,19 @@ html, body {
   @blur-size: 5px;
   @keyframes turn {
     0% {
-      text-shadow: @shift-size 0px @blur-size;
+      text-shadow: @shift-size 0 @blur-size;
     }
     25% {
-      text-shadow: 0px @shift-size @blur-size;
+      text-shadow:0 @shift-size @blur-size;
     }
     50% {
       text-shadow: -@shift-size 0 @blur-size;
     }
     75% {
-      text-shadow: 0px -@shift-size @blur-size;
+      text-shadow:0 -@shift-size @blur-size;
     }
     100% {
-      text-shadow: @shift-size 0px @blur-size;
+      text-shadow: @shift-size 0 @blur-size;
     }
   }
 }
